--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@sweetalert2/themes": "^5.0.18",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
+    "react-jwt": "^1.2.2",
+    "react-paginate": "^8.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
